welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: type mismatch;
 found   : Int
 required: java.awt.Color
		setCouleurBrosse((c+decal)%(hauteur))
                                          ^Array2:27: error: not found: value decal
	setCouleurBrosse(((hauteur-1)+decal)%(hauteur))
                                      ^